# ppft

./: .buildinfo  .gitignore  Changelog.MD  LICENSE  README.md  genindex.html  index.html  main.py  modules.html  objects.inv  ppft.html  ppft.util.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: automation.yaml
_sources/: modules.rst.txt  ppft.rst.txt  ppft.util.rst.txt
configs/: logging.json
docs/source/: conf.py  index.rst
ppft/util/: entrypoints.py  general.py  parsing.py
tests/: basic_test.py
